# airconditioner_remote

./: .gitignore  .project  Cargo.toml  Gruntfile.js  Makefile.toml  README.md  app.js  build.rs  electra_ir.js  irsend.js  package.json  send.c  temperature.js  test.js  webpack.config.ts
arduino/: teensy.ino
javascripts/: app.js  spinner.js  temperature-plot.js
lirc/: lircd.conf
public/fonts/: LCDEF-webfont.eot  airconditioner-webfont.eot
public/javascripts/: app.js  bootstrap-button.js  bootstrap.js  d3.js  fastbutton.js  jquery.js  jquery.throttle-debounce.js  spinner.js  temperature-plot.js
public/stylesheets/: style.css  style.css.map
routes/: index.js
scss/: app.scss  fonts.scss  svg.scss
src/: Rocket.toml  irsend.rs  main.rs  temperature.rs
src/protocol/: electra.rs  mod.rs
src/web/: index.html  package.json  postcss.config.js  tsconfig.json  webpack.config.ts
src/web/js/: index.ts  toggle.ts  utils.ts
src/web/scss/: index.scss  svg.scss
views/: index.haml
