[package]
name = "airconditioner_remote"
version = "0.1.0"
authors = ["Amir Grozki <amirgrozki@gmail.com>"]
edition = "2018"

[dependencies]
glob = "0.3.0"
time = "0.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4.0"
rocket_contrib = "0.4.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
rppal = { version = "0.11.2", features = ["hal"] }