[package]
name = "airconditioner_remote"
version = "0.2.1"
authors = ["Amir Grozki <amirgrozki@gmail.com>"]
edition = "2018"

[dependencies]
glob = "0.3.0"
time = "0.2"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4.10"
rocket_contrib = "0.4.10"
nb = "1.0"
embedded-hal = "0.2.5"
rppal = { version = "0.12.0", features = ["hal"] }

[dev-dependencies]
cargo-make = "0.35"
